# AnaDash

./: .gitignore  BrazilianTaxSystem.md  README.md  compileUpload.sh  finalBOM.csv
cad/assets/: README.md
driver/: Cargo.toml
driver/src/: main.rs  utils.rs
driver/src/linux/: utils.rs
drivers/: Cargo.toml
drivers/src/: main.rs
firmware/driver/: Cargo.toml
firmware/driver/src/: hardware_info.rs  main.rs  sensor_utils.rs
hardware/case/assets/: 1e77-TFT-160x128.stp
hardware/images/: README.md
hardware/inputBoard/: inputBoard.kicad_pcb  inputBoard.kicad_pro  inputBoard.kicad_sch  ~inputBoard.kicad_pcb.lck
hardware/mainBoard/: mainBoard.kicad_pcb  mainBoard.kicad_pro  mainBoard.kicad_sch  sym-lib-table
pcb/: anadash_pcb.kicad_pcb  anadash_pcb.kicad_prl  anadash_pcb.kicad_pro  anadash_pcb.kicad_sch  switchesanddisplay.kicad_sch
pcb/anadashMainBoard/: anadashMainBoard-unsaved-export-VwQBCQ.kicad_prl  anadashMainBoard.kicad_pcb  anadashMainBoard.kicad_prl  anadashMainBoard.kicad_pro  anadashMainBoard.kicad_sch
pcb/anadashSecondaryBoard/: anadashSecondaryBoard-unsaved-export-pGTPuQ.kicad_prl  anadashSecondaryBoard.kicad_pcb  anadashSecondaryBoard.kicad_prl  anadashSecondaryBoard.kicad_pro  anadashSecondaryBoard.kicad_sch  fp-lib-table
pcb/assets/: mainBoardBOM.csv
software/driver/: Cargo.toml
software/driver/src/: hardware_info.rs  main.rs  mpris_monitor.rs  notification_monitor.rs  utils.rs
software/firmware/: Cargo.toml
software/firmware/.cargo/: config.toml
software/firmware/src/: hardware.rs  main.rs  usb_handler.rs
software/firmware/src/hardware/: input_array.rs  input_handler.rs  output_array.rs
software/firmware/src/usb_handler/: cdc_task.rs  input_task.rs
software/shared/: Cargo.toml
software/shared/src/: lib.rs
sysInfoDriver/: Cargo.toml
sysInfoDriver/src/: main.rs  sensor_utils.rs
systemStatDriver/: Cargo.toml
systemStatDriver/src/: main.rs
