[package]
edition = "2024"
name = "firmware"
version = "0.1.0"
authors = ["Mircas001 <mircas001@protonmail.com>"]
resolver = "2"

[[bin]]
name = "firmware"
test = false
bench = false

[dependencies]
defmt = "1.1"
defmt-rtt = "1.2"
panic-probe = { version = "1.0", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.7"
embedded-io-async = "0.7"
embedded-storage = "0.3.1"
cortex-m-rt = "0.7.5"

embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-sync = { version = "0.8" }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }

cortex-m = { version = "0.7.7" }
embassy-rp = { version = "0.9", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-embedded-hal = "0.6.0"

embedded-graphics = "0.8.2"
st7735-lcd = "0.10.0"

usb-device = "0.3.2"
embassy-usb = "0.6.0"
usbd-hid = "0.10.0"

static_cell = "2.1.1"
portable-atomic = { version = "1.14.0", features = ["critical-section"] }
embassy-futures = "0.1.2"
rotary-encoder-hal = "0.6.0"
postcard = "1.1.3"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
