[package]
name = "shared"
version = "0.1.0"
edition = "2024"
description = "This is an shared library to host the data types both the driver and the firmware use"

[lib]
name = "shared"
path = "src/lib.rs"

[dependencies]
heapless = {version = "0.9.3", features = ["serde", "defmt"]}
serde = {version = "1.0.228", default-features = false, features = ["derive"]}
